Connect the webapp with flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
       <div class="col-md-2 col-sm-0">
       </div>
       <div class="col-md-4 col-sm-12">
-        <form action="upload.php" method="post" enctype="multipart/form-data">
-          <input type="file" name="fileToUpload" id="fileToUpload">
+        <form action="/" method="POST" enctype="multipart/form-data">
+          <input type="file" name="file" id="fileToUpload">
           <input type="submit" value="Ladda Upp"  name="submit">
         </form>
       </div>
