Update bootstrap and add javascript support

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en">
+<html lang="en">
 
 <head>
   <title>Rättsäker Textanalys</title>
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="static/bootstrap.css">
+  <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css">
+  <script src="static/lib/popper.js"</script>
+  <script src="static/lib/bootstrap.js"</script>
+
   <link rel="stylesheet" href="static/style.css">
 </head>
 
