--- a/templates/index.html
+++ b/templates/index.html
@@ -20,10 +20,9 @@
   <div class="container">
     <div class="jumbotron">
       <h1 class="display-3">Rättsäker Textanalys</h1>
-      <p class="lead">Detta är en webbapplikation skapad av Henrik Svensson och
-      Kalle Lindqvist för deras examensarbete.
-      Examensarbetet går ut på att vi har skrivit ett program som analyserar
-      polisrapporter och rapporterar de fel som hittas.</p>
+      <p class="lead">Detta är en webbapplikation går ut på att vi har skrivit
+      ett program som analyserar polisrapporter och rapporterar de fel som
+      hittas. Applikation är skriven av Kalle Lindqvist och Henrik Svensson.</p>
       <hr class="my-4">
       <p>Välj en polisrapport i .docx-format och tryck analysera för att göra en analys.</p>
       <p class="lead">
