Update html template to use text position

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <caption id="analysisTableCaption"></caption>
         <thead>
           <tr>
-            <th scope="col">Rubrik</th>
+            <th scope="col">Position</th>
             <th scope="col">Fel</th>
           </tr>
         </thead>
