Generate a full report based on the analysis

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,6 +46,8 @@
         <tbody>
         </tbody>
       </table>
+      <h2 class="display-4">Document</h2>
+      <pre id="document"></pre>
     </div>
 
   </div>
