--- a/static/style.css
+++ b/static/style.css
@@ -5,19 +5,25 @@ pre {
   white-space: -pre-wrap;
   white-space: -o-pre-wrap;
   word-wrap: break-word;
- }
+}
 @media only screen and (max-width: 736px) {
   h1 {
     font-size: 20px;
-    text-align: center; }
- }
+    text-align: center;
+  }
+}
 
 @media only screen and (max-width: 1024px) {
   h1 {
-    font-size: 40px; }
- }
+    font-size: 40px;
+  }
+}
 
-mark{
+mark {
   background: orange;
   color: black;
- }
+}
+
+#document {
+  background-color: white;
+}
