--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
       </p>
       <hr class="my-4">
       <h2 class="display-4">Analys</h2>
-      <table class="table table-striped" id="analysisTable">
+      <table class="table table-hover" id="analysisTable">
         <caption id="analysisTableCaption"></caption>
         <thead>
           <tr>
