--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -1,104 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Rättsäker Textanalys</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
 
-<head>
-  <title>Rättsäker Textanalys</title>
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta charset="UTF-8">
+    <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js"
+      integrity="sha256-4HLtjeVgH0eIB3aZ9mLYF6E8oU5chNdjU6p6rrXpl9U="
+      crossorigin="anonymous"
+    ></script>
+    <script type="text/javascript" src="static/canvas.js"></script>
+    <link rel="stylesheet" href="static/canvas.css" />
+  </head>
 
-  <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.min.js" integrity="sha256-4HLtjeVgH0eIB3aZ9mLYF6E8oU5chNdjU6p6rrXpl9U=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="static/canvas.js"></script>
-  <link rel="stylesheet" href="static/canvas.css">
-</head>
-
-<body>
-  <div class="container">
-    <!-- Start of modal -->
-    <div id="analys-modal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Fel hittades vid analys av rapport</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div id="analysisTable" class="list-group">
+  <body>
+    <div class="container">
+      <!-- Start of error list modal -->
+      <div
+        id="analys-modal"
+        class="modal fade bd-example-modal-lg"
+        tabindex="-1"
+        role="dialog"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Fel hittades vid analys av rapport</h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
             </div>
-            <hr>
-            <pre id="document"></pre>
+            <div class="modal-body">
+              <div id="analysisTable" class="list-group-flush"></div>
+              <hr />
+              <pre id="document"></pre>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Avbryt
+              </button>
+              <button id="ignoreAndSubmit" type="button" class="btn btn-danger">
+                Ignorera fel och lämna in
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End of error list modal -->
+
+      <hr class="my-4" />
+      <div class="row">
+        <div class="col-sm"><p class="h3">Inlämning av rapport</p></div>
+        <div class="col-sm text-right">
+          <button type="button" id="lamna-in" class="btn btn-danger">
+            Lämna in
+          </button>
+        </div>
+      </div>
+      <hr class="my-4" />
+      <div class="row">
+        <div class="col-3">
+          <span class="font-weight-bold">Färdig</span>
+          <span>5 maj kl. 23.55</span>
+        </div>
+        <div class="col-3">
+          <span class="font-weight-bold">Poäng</span> <span>6 HP</span>
+        </div>
+        <div class="col-3">
+          <span class="font-weight-bold">Lämnar in</span>
+          <span>en .docx fil</span>
+        </div>
+      </div>
+      <hr class="my-4" />
+      <div class="row">
+        <div class="col-6 offset-sm-3">
+          <div id="inlamning-ruta" class="card text-center">
+            <div class="card-header">
+              <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Fil</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">Box</a></li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Google Drive</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Office 365</a>
+                </li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <p class="card-text">Välj en fil från din dator att lämna in.</p>
+              <form class="form-inline" id="docxForm">
+                <div class="form-group">
+                  <input
+                    type="file"
+                    class="form-control-file"
+                    id="docxSelector"
+                  />
+                </div>
+                <button type="submit" class="btn btn-danger" id="submitButton">
+                  <span
+                    id="turnInSpinner"
+                    class="spinner-border spinner-border-sm"
+                    role="status"
+                    aria-hidden="true"
+                  ></span>
+                  Lämna in
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- End of modal -->
-
-    <hr class="my-4">
-    <div class="row">
-      <div class="col-sm">
-        <p class="h3">Inlämning av rapport</p>
-      </div>
-      <div class="col-sm text-right">
-        <button type="button" id="lamna-in" class="btn btn-danger">Lämna in</button>
-      </div>
-    </div>
-    <hr class="my-4">
-    <div class="row">
-      <div class="col-3">
-        <span class="font-weight-bold">Färdig</span>
-        <span>5 maj kl. 23.55</span>
-      </div>
-      <div class="col-3">
-        <span class="font-weight-bold">Poäng</span>
-        <span>6 HP</span>
-      </div>
-      <div class="col-3">
-        <span class="font-weight-bold">Lämnar in</span>
-        <span>en .docx fil</span>
-      </div>
-    </div>
-    <hr class="my-4">
-    <div class="row">
-      <div class="col-6 offset-sm-3">
-        <div id="inlamning-ruta" class="card text-center">
-          <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Fil</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Box</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Google Drive</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Office 365</a>
-              </li>
-
-            </ul>
-          </div>
-          <div class="card-body">
-            <p class="card-text">Välj en fil från din dator att lämna in.</p>
-            <form class="form-inline" id="docxForm">
-              <div class="form-group">
-                <input type="file" class="form-control-file" id="docxSelector">
-              </div>
-              <button type="submit" class="btn btn-danger" id="submitButton">Lämna in</button>
-            </form>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
