--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -67,11 +67,12 @@
             </div>
             <div class="modal-footer">
               <button
+                id="goBack"
                 type="button"
                 class="btn btn-secondary"
                 data-dismiss="modal"
               >
-                Avbryt
+                Gå tillbaka
               </button>
               <button id="ignoreAndSubmit" type="button" class="btn btn-danger">
                 Ignorera fel och lämna in
