--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -42,6 +42,7 @@
         tabindex="-1"
         role="dialog"
         aria-hidden="true"
+        data-backdrop="static"
       >
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
