--- a/static/canvas.css
+++ b/static/canvas.css
@@ -27,3 +27,10 @@ mark {
 #document {
   background-color: white;
 }
+
+.selecttextbutton {
+  -webkit-user-select: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
